--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,17 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+# Configuration for Play's AkkaHttpServer
+play {
+
+  server {
+    # The server provider class name
+    provider = "play.core.server.AkkaHttpServerProvider"
+  }
+}
+
+// Enable richer akka logging
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
