--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,3 +25,6 @@ play.filters.hosts.allowed = ["localhost:9000", "localhost:19001"]
 
 // Add CSP header in explicitly in a custom filter.
 play.filters.enabled += filters.ContentSecurityPolicyFilter
+
+play.http.secret.key="changeme"
+play.http.secret.key=${?APPLICATION_SECRET}
