--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@ akka {
 play.filters.headers.contentSecurityPolicy = null
 
 // https://www.playframework.com/documentation/2.6.x/AllowedHostsFilter
-play.filters.hosts.allowed = ["localhost:9000", "localhost:19001"]
+play.filters.hosts.allowed = [".herokuapp.com", "localhost:9000", "localhost:19001"]
 
 // Add CSP header in explicitly in a custom filter.
 play.filters.enabled += filters.ContentSecurityPolicyFilter
