add explicit port config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,3 +28,7 @@ play.filters.enabled += filters.ContentSecurityPolicyFilter
 
 play.http.secret.key="changeme"
 play.http.secret.key=${?APPLICATION_SECRET}
+
+# the assembly command will take this one.
+http.port=9000
+https.port=19001
